--- a/sicupira/templates/pessoa/discente_list.html
+++ b/sicupira/templates/pessoa/discente_list.html
@@ -52,6 +52,7 @@
             </div>
             <button type="submit" class="btn btn-default">Buscar</button>                    
             <button type="reset"  class="btn btn-warning" id="btnReset" onclick="Reset();" >Limpar</button>
+            <a href="{% url "discente_new" %}" style="float: right;font-size: 190%;"><span class="label label-success">Novo +</span></a> 
         </form>
     </div>
     <script>
@@ -109,8 +110,6 @@
             {% endfor %}
         </tbody>
         </table>
-
-        <a href="{% url "discente_new" %}" style="float: left;">Novo</a>
 
         <div class="pagination" style="padding-left: 35%;">
             <span class="step-links">
