--- a/sicupira/templates/sicupira/disciplina_list.html
+++ b/sicupira/templates/sicupira/disciplina_list.html
@@ -33,6 +33,7 @@
             </div>            
             <button type="submit" class="btn btn-default">Buscar</button>                    
             <button type="reset"  class="btn btn-warning" id="btnReset" onclick="Reset();" >Limpar</button>
+            <a href="{% url "disciplina_new" %}" style="float: right;font-size: 190%;"><span class="label label-success">Novo +</span></a> 
         </form>
     </div>
     <script>
@@ -47,6 +48,7 @@
     </script>
 
     <hr/>
+    
 
     <table class="table table-striped">
         <thead>
@@ -79,7 +81,7 @@
         </tbody>
         </table>
 
-        <a href="{% url "disciplina_new" %}" style="float: left;">Novo</a> 
+        
 
         <div class="pagination" style="padding-left: 35%;">
             <span class="step-links">
