ajustes modelo e busca de discente e docente

--- a/sicupira/templates/common/telefoneenderecoprograma_detail.html
+++ b/sicupira/templates/common/telefoneenderecoprograma_detail.html
@@ -2,8 +2,8 @@
      <thead>
         <tr>
           <th style="width:200px">Tipo</th>
-          <th style="width:200px">Telefone</th>
           <th style="width:200px">DDD</th>
+          <th style="width:200px">Número</th>
           <th style="width:200px">Ramal</th>
         </tr>
      </thead>
