--- a/sicupira/templates/pessoa/discente_list.html
+++ b/sicupira/templates/pessoa/discente_list.html
@@ -15,6 +15,33 @@
         <h4>Filtro</h2>
         <form action="/discente" method="get">
             <div class="form-group">
+                <label for="ano">Ano:</label>
+                <input type="input" class="form-control" id="ano" name="ano" value="" list="lista_ano">                
+                <datalist id="lista_ano">
+                    {% for discente in page_obj %}
+                        <option value="{{ discente.ano }}"></option>
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="form-group">
+                <label for="instituicao">Instituição:</label>
+                <input type="input" class="form-control" id="instituicao" name="instituicao" value="" list="lista_instituicao">                
+                <datalist id="lista_instituicao">
+                    {% for discente in page_obj %}
+                        <option value="{{ discente.curso.programa_id.instituicao.nome }}"></option>
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="form-group">
+                <label for="programa">Programa:</label>
+                <input type="input" class="form-control" id="programa" name="programa" value="" list="lista_programa">                
+                <datalist id="lista_programa">
+                    {% for discente in page_obj %}
+                        <option value="{{ discente.curso.programa_id.programa_nome }}"></option>
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="form-group">
                 <label for="nome">Nome:</label>
                 <input type="input" class="form-control" id="nome" name="nome" value="" list="lista_nome">                
                 <datalist id="lista_nome">
@@ -24,29 +51,20 @@
                 </datalist>
             </div>
             <div class="form-group">
-                <label for="sexo">Sexo:</label>
-                <input type="input" class="form-control" id="sexo" name="sexo" value="" list="lista_sexo">                
-                <datalist id="lista_sexo">
-                    {% for discente in page_obj %}
-                        <option value="{{ discente.pessoa.sexo.desc_sexo }}"></option>
-                    {% endfor %}
-                </datalist>
-            </div>
-            <div class="form-group">
-                <label for="curso">Curso:</label>
-                <input type="input" class="form-control" id="curso" name="curso" value="" list="lista_curso">                
-                <datalist id="lista_curso">
-                    {% for discente in page_obj %}
-                        <option value="{{ discente.curso.nome_curso }}"></option>
-                    {% endfor %}
-                </datalist>
-            </div>
-            <div class="form-group">
-                <label for="nivel">Graduação:</label>
+                <label for="nivel">Nivel:</label>
                 <input type="input" class="form-control" id="nivel" name="nivel" value="" list="lista_nivel">                
                 <datalist id="lista_nivel">
                     {% for discente in page_obj %}
                         <option value="{{ discente.nivel.desc_nivel_graduacao }}"></option>
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="form-group">
+                <label for="situacao">Situação:</label>
+                <input type="input" class="form-control" id="situacao" name="situacao" value="" list="lista_situacao">                
+                <datalist id="lista_situacao">
+                    {% for discente in page_obj %}
+                        <option value="{{ discente.situacao.desc_situacao_matricula }}"></option>
                     {% endfor %}
                 </datalist>
             </div>
@@ -57,10 +75,12 @@
     </div>
     <script>
         // Script para manipular via DOM as buscas
+        document.getElementById('instituicao').value = urlParams.get('instituicao')      
+        document.getElementById('programa').value = urlParams.get('programa')      
         document.getElementById('nome').value = urlParams.get('nome')      
-        document.getElementById('sexo').value = urlParams.get('sexo')
-        document.getElementById('curso').value = urlParams.get('curso')
-        document.getElementById('nivel').value = urlParams.get('nivel')        
+        document.getElementById('nivel').value = urlParams.get('nivel')
+        document.getElementById('situacao').value = urlParams.get('situacao')
+        document.getElementById('ano').value = urlParams.get('ano')        
         
         //Reseta formulario. Troque pela url correta
         function Reset() {
@@ -74,16 +94,8 @@
         <thead>
             <tr>
                 <th>Nome</th>
-                <th>Sexo</th>
-                <th>Nascimento</th>
-                <th>Documento</th>
-                <th>Tipo de documento</th>
-                <th>E-mail</th>
-                <th>Nacionalidade</th>
-                <th>Graduação</th>
-                <th>Curso</th>
+                <th>Nível</th>
                 <th>Situação</th>
-                <th>Data da situação</th>
                 <th>Ver</th>
                 <th>Alterar</th>
                 <th>Apagar</th>
@@ -93,16 +105,8 @@
             {% for discente in page_obj %}
             <tr>
             <td>{{ discente.pessoa.nome }}</td>
-            <td>{{ discente.pessoa.sexo.desc_sexo }}</td>
-            <td>{{ discente.pessoa.data_nascimento }}</td>
-            <td>{{ discente.pessoa.numero_documento }}</td>
-            <td>{{ discente.pessoa.tipo_documento.desc_tipo_doc }}</td>
-            <td>{{ discente.pessoa.email }}</td>
-            <td>{{ discente.pessoa.nacionalidade.nome_pais }}</td>
             <td>{{ discente.nivel.desc_nivel_graduacao }}</td>
-            <td>{{ discente.curso.nome_curso }}</td>
             <td>{{ discente.situacao.desc_situacao_matricula }}</td>
-            <td>{{ discente.data_situacao }}</td>
             <td><a href="{% url "discente_view" discente.pessoa.id %}"><span class="label label-info">ver</span></a></td>
             <td><a href="{% url "discente_edit" discente.pessoa.id %}"><span class="label label-warning">alterar</span></a></td>
             <td><a href="{% url "discente_delete" discente.pessoa.id %}"><span class="label label-danger">apagar</span></a></td>
