--- a/sicupira/templates/pessoa/docente_list.html
+++ b/sicupira/templates/pessoa/docente_list.html
@@ -15,7 +15,34 @@
         <h4>Filtro</h2>
         <form action="/docente" method="get">
             <div class="form-group">
-                <label for="nome">Nome:</label>
+                <label for="ano">Ano:</label>
+                <input type="input" class="form-control" id="ano" name="ano" value="" list="lista_ano">                
+                <datalist id="lista_ano">
+                    {% for docente in page_obj %}
+                        <option value="{{ docente.ano }}"></option>
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="form-group">
+                <label for="instituicao">Instituição:</label>
+                <input type="input" class="form-control" id="instituicao" name="instituicao" value="" list="lista_instituicao">                
+                <datalist id="lista_instituicao">
+                    {% for docente in page_obj %}
+                        <option value="{{ docente.programa.instituicao.nome }}"></option>
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="form-group">
+                <label for="programa">Programa:</label>
+                <input type="input" class="form-control" id="programa" name="programa" value="" list="lista_programa">                
+                <datalist id="lista_programa">
+                    {% for docente in page_obj %}
+                        <option value="{{ docente.programa.programa_nome }}"></option>
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="form-group">
+                <label for="nome">Docente:</label>
                 <input type="input" class="form-control" id="nome" name="nome" value="" list="lista_nome">                
                 <datalist id="lista_nome">
                     {% for docente in page_obj %}
@@ -24,29 +51,11 @@
                 </datalist>
             </div>
             <div class="form-group">
-                <label for="sexo">Sexo:</label>
-                <input type="input" class="form-control" id="sexo" name="sexo" value="" list="lista_sexo">                
-                <datalist id="lista_sexo">
+                <label for="vinculo_ies">Categoria:</label>
+                <input type="input" class="form-control" id="categoria" name="categoria" value="" list="lista_categoria">                
+                <datalist id="lista_categoria">
                     {% for docente in page_obj %}
-                        <option value="{{ docente.sexo.desc_sexo }}"></option>
-                    {% endfor %}
-                </datalist>
-            </div>
-            <div class="form-group">
-                <label for="titulo_nivel">Graduação:</label>
-                <input type="input" class="form-control" id="titulo_nivel" name="titulo_nivel" value="" list="lista_titulo_nivel">                
-                <datalist id="lista_titulo_nivel">
-                    {% for docente in page_obj %}
-                        <option value="{{ docente.titulo_nivel.desc_nivel_graduacao }}"></option>
-                    {% endfor %}
-                </datalist>
-            </div>
-            <div class="form-group">
-                <label for="vinculo_ies">Vinculo IES:</label>
-                <input type="input" class="form-control" id="vinculo_ies" name="vinculo_ies" value="" list="lista_vinculo_ies">                
-                <datalist id="lista_vinculo_ies">
-                    {% for docente in page_obj %}
-                        <option value="{{ docente.vinculo_ies.desc_vinclulo_ies }}"></option>
+                        <option value="{{ docente.categoria.desc_categoria }}"></option>
                     {% endfor %}
                 </datalist>
             </div>
@@ -57,10 +66,11 @@
     </div>
     <script>
         // Script para manipular via DOM as buscas
-        document.getElementById('nome').value = urlParams.get('nome')      
-        document.getElementById('sexo').value = urlParams.get('sexo')
-        document.getElementById('titulo_nivel').value = urlParams.get('titulo_nivel')        
-        document.getElementById('vinculo_ies').value = urlParams.get('vinculo_ies')
+        document.getElementById('ano').value = urlParams.get('ano')
+        document.getElementById('instituicao').value = urlParams.get('instituicao')
+        document.getElementById('programa').value = urlParams.get('programa')
+        document.getElementById('nome').value = urlParams.get('nome')                      
+        document.getElementById('categoria').value = urlParams.get('categoria')
         
         //Reseta formulario. Troque pela url correta
         function Reset() {
@@ -74,18 +84,7 @@
         <thead>
             <tr>
                 <th>Nome</th>
-                <th>Sexo</th>
-                <th>Nascimento</th>
-                <th>Documento</th>
-                <th>Tipo de documento</th>
-                <th>E-mail</th>
-                <th>Nacionalidade</th>
-                <th>Graduação</th>
-
-                <th>Data titulação</th>
-                <th>País do título</th>
-                <th>Regime de trabalho</th>
-                <th>Vínculo IES</th>
+                <th>Categoria</th>
                 
                 <th>Ver</th>
                 <th>Alterar</th>
@@ -96,17 +95,7 @@
             {% for docente in page_obj %}
             <tr>
             <td>{{ docente.pessoa.nome }}</td>
-            <td>{{ docente.pessoa.sexo.desc_sexo }}</td>
-            <td>{{ docente.pessoa.data_nascimento }}</td>
-            <td>{{ docente.pessoa.numero_documento }}</td>
-            <td>{{ docente.pessoa.tipo_documento.desc_tipo_doc }}</td>
-            <td>{{ docente.pessoa.email }}</td>
-            <td>{{ docente.pessoa.nacionalidade.nome_pais }}</td>
-            <td>{{ docente.titulo_nivel.desc_nivel_graduacao }}</td>
-            <td>{{ docente.data_titulacao }}</td>
-            <td>{{ docente.titulo_pais.nome_pais }}</td>
-            <td>{{ docente.regime_trabalho.desc_regime_trabalho }}</td>
-            <td>{{ docente.vinculo_ies.desc_vinculo_ies }}</td>
+            <td>{{ docente.categoria.desc_categoria }}</td>
             <td><a href="{% url "docente_view" docente.pessoa.id %}"><span class="label label-info">ver</span></a></td>
             <td><a href="{% url "docente_edit" docente.pessoa.id %}"><span class="label label-warning">alterar</span></a></td>
             <td><a href="{% url "docente_delete" docente.pessoa.id %}"><span class="label label-danger">apagar</span></a></td>
