--- a/sicupira/templates/sicupira/linhapesquisa_form.html
+++ b/sicupira/templates/sicupira/linhapesquisa_form.html
@@ -45,7 +45,7 @@
       <div class="form-row">
         <div class="form-group">
           {{ form.area_concentracao_id|as_crispy_field }}
-          <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+          <!-- <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script> -->
           <script>
             // Rotina para CRUD inline dentro de outro template
             $(document).ready(function () {
