erro de sintaxe disciplinas

--- a/sicupira/templates/sicupira/disciplina_list.html
+++ b/sicupira/templates/sicupira/disciplina_list.html
@@ -1,7 +1,7 @@
 {% extends 'sicupira/base.html' %}
 
 {% block breadcrumbs %}
-    {{ block.super }} » <a href="{% url 'disciplina_list' %}">Lista de discilinas</a>
+    {{ block.super }} » <a href="{% url 'disciplina_list' %}">Lista de disciplinas</a>
 {% endblock %}
 
 {% block content %}
