formatacao corrreta valida data_inicio < data_fim

--- a/sicupira/templates/sicupira/linhapesquisa_form.html
+++ b/sicupira/templates/sicupira/linhapesquisa_form.html
@@ -22,9 +22,12 @@
 <div style="width: 90%;margin: auto;">
   <form method="post">
     {% csrf_token %}
+    
+    {% if linhapesquisa_form.errors %}
     <div class="alert alert-danger" role="alert">
       {{ linhapesquisa_form.errors }}
     </div>
+    {% endif %}
     
     <div class="form-row">
       <div class="form-group">
