--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -36,7 +36,7 @@
 <script>  
 $( function() {
   dateinput = document.getElementsByClassName("dateinput form-control");
-  $( dateinput ).datepicker().attr("autocomplete", "off");
+  $( dateinput ).datepicker({dateFormat: 'dd/mm/yy'}).attr("autocomplete", "off");
   $( dateinput ).mask('00/00/0000');
   //Até 5 telefones com mascara
   $('#id_EnderecoTelefone-0-numero').mask('00000-0000');  
