--- a/sicupira/templates/sicupira/enderecoprograma_list.html
+++ b/sicupira/templates/sicupira/enderecoprograma_list.html
@@ -70,16 +70,16 @@
             <tr>
 
 
-                <th>programa_id</th>
-                <th>estado_id</th>
-                <th>cep</th>
-                <th>logradouro</th>
-                <th>numero</th>
-                <th>complemento</th>
-                <th>bairro</th>
-                <th>municipio</th>
-                <th>email</th>
-                <th>web_site</th>
+                <th>Programa</th>
+                <th>UF</th>
+                <th>CEP</th>
+                <th>Logradouro</th>
+                <th>Número</th>
+                <th>Complemento</th>
+                <th>Bairro</th>
+                <th>Municipio</th>
+                <th>Email</th>
+                <th>WEB Site</th>
                 <th>Ver</th>
                 <th>Alterar</th>
                 <th>Apagar</th>
