--- a/sicupira/templates/pessoa/docente_confirm_delete.html
+++ b/sicupira/templates/pessoa/docente_confirm_delete.html
@@ -10,7 +10,63 @@
     <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Apaga Docente</h3>
     <form method="post">{% csrf_token %}
         Voce realmente quer apagar "{{ docente.pessoa.nome }}" ?
-        <br/>
+        <br/><br/>
+
+        <h4> Detalhes do Docente</h4>
+    
+        <table class="table table-striped">
+            <thead>
+                <th>Nome:</th>
+                <th>{{docente.pessoa.nome}}</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Sexo:</td>
+                    <td>{{ docente.pessoa.sexo.desc_sexo }}</td>
+                </tr>
+                <tr>
+                    <td>Email:</td>
+                    <td>{{ docente.pessoa.email }}</td>
+                </tr>
+                <tr>
+                    <td>Tipo documento:</td>
+                    <td>{{ docente.pessoa.tipo_documento.desc_tipo_doc }}</td>
+                </tr>
+                <tr>
+                    <td>Número documento:</td>
+                    <td>{{ docente.pessoa.numero_documento }}</td>
+                </tr>
+                <tr>
+                    <td>Título:</td>
+                    <td>{{ docente.titulo_nivel.desc_nivel_graduacao }}</td>
+                </tr>
+                <tr>
+                    <td>Programa:</td>
+                    <td>{{ docente.programa.nome_programa }}</td>
+                </tr>
+                <tr>
+                    <td>Instituição:</td>
+                    <td>{{ docente.programa.instituicao.nome }}</td>
+                </tr>
+                <tr>
+                    <td>Ano Inicio:</td>
+                    <td>{{ docente.ano }}</td>
+                </tr>
+                <tr>
+                    <td>Categoria:</td>
+                    <td>{{ docente.categoria.desc_categoria }}</td>
+                </tr>            
+                <tr>
+                    <td>Regime:</td>
+                    <td>{{ docente.regime_trabalho.desc_regime_trabalho }}</td>
+                </tr>
+                <tr>
+                    <td>Vínculo IES:</td>
+                    <td>{{ docente.vinculo_ies.desc_vinculo_ies }}</td>
+                </tr>
+            </tbody>
+        </table>
+
         {% include 'common/delete_button.html' %}
     </form>
 
