--- a/sicupira/templates/sicupira/linhapesquisa_confirm_delete.html
+++ b/sicupira/templates/sicupira/linhapesquisa_confirm_delete.html
@@ -9,7 +9,39 @@
 
     <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Apaga Linha de Pesquisa</h3>
     <form method="post">{% csrf_token %}
-        Voce realmente quer apagar "{{ linhapesquisa.nome_linha_pesquisa }}" ?<br/>
+        Voce realmente quer apagar "{{ linhapesquisa.nome_linha_pesquisa }}" ?<br/><br/>
+
+        <h4> Detalhes da Linha de Pesquisa</h4>
+    
+        <table class="table table-striped">
+            <thead>
+                <th>Nome:</th>
+                <th>{{linhapesquisa.nome_linha_pesquisa}}</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Código do Programa: </td>
+                    <td>{{ linhapesquisa.area_concentracao_id.programa_id.codigo_programa }}</td>
+                </tr>
+                <tr>
+                    <td>Programa:</td>
+                    <td>{{ linhapesquisa.area_concentracao_id.programa_id.nome_programa }}</td>
+                </tr>
+                <tr>
+                    <td>Área de Concentração: </td>
+                    <td>{{ linhapesquisa.area_concentracao_id }}</td>
+                </tr>
+                <tr>
+                    <td>Data de Início:</td>
+                    <td>{{ linhapesquisa.data_inicio }}</td>
+                </tr>
+                <tr>
+                    <td>Data de Fim:</td>
+                    <td>{{ linhapesquisa.data_fim }}</td>
+                </tr>
+            </tbody>
+        </table>
+
         {% include 'common/delete_button.html' %}
     </form>
 
